# personal

./: .gitignore  Cargo.toml  Embed.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: basic.yml  coverage.yml  doc.yml  nucleo_h7.yml  stm32h723zg.yml
ferox/: Cargo.toml  README.md
ferox/examples/: blinky.rs  ctl200-demo.rs  ctl200-dma.rs  ctl200.rs  usart_split.rs
ferox/src/: common.rs  drivers.rs  fmt.rs  lib.rs  proto.rs  uart.rs
ferox/src/drivers/: koheron.rs  mod.rs  va.rs
ferox/src/drivers/koheron/: ctl200.rs
ferox/src/proto/: ascii.rs  data.rs  error.rs  errors.rs  ferox.rs  parse.rs
ferox/src/proto/ascii/: deser.rs  ser.rs  str.rs  vec.rs
ferox/src/testing/: helpers.rs
ferox/src/uart/: post_processor.rs
nucleo_h7/: Cargo.toml
nucleo_h7/.cargo/: config.toml
nucleo_h7/examples/: ctl200-demo.rs
stm32/: Cargo.toml  build.rs  memory.x
stm32/.cargo/: config.toml
stm32/examples/: blinky.rs  ctl200-demo.rs  ctl200-dma.rs  ctl200.rs
stm32/src/: ctl200.rs  handler.rs  handlers.rs  lib.rs  processor.rs
stm32h723zg/examples/: blinky.rs
x86/: Cargo.toml
x86/.cargo/: config
x86/src/: errors.rs  lib.rs
