[package]
name = "ferox"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.4.2", features = ["serde"] }
defmt = { version = "0.3", optional = true }
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = "0.8"
itertools = { version = "0.13", default-features = false}
static_cell = "2.1"
serde = { version = "1.0", default-features = false }
serde-json-core = { version = "0.6", default-features = false }
log = { version = "0.4", optional = true}

[dev-dependencies]
nb = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3"}
lazy_static = "1.4"
env_logger = "0.11"

[features]
defmt = [ "dep:defmt" ]
log = [ "dep:log" ]
default = [ "defmt" ]
