[package]
name = "ferox"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = { version = "0.8.0", features = ["serde"] }
static_cell = "2.1.0"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }

defmt = { version = "0.3.10", optional = true }
log = { version = "0.4.22", optional = true}

[dev-dependencies]
nb = "1.0.0"
tokio = { version = "1.42.0", features = ["full"] }
futures = { version = "0.3.31"}
lazy_static = "1.5.0"
env_logger = "0.11.5"

[features]
defmt = [ "dep:defmt" ]
log = [ "dep:log" ]
full-display = []

default = [ "std" ]
std = [
    "full-display",
    "log"
]
embedded = [ "defmt" ]