[package]
name = "ferox"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
static_cell = "2.1.0"

defmt-or-log = { version = "0.2.1", default-features = false}
defmt = { version = "0.3.10", optional = true }
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
log = { version = "0.4.22", optional = true}
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
postcard ={ version = "1.1.1", default-features = false, features = ["heapless"] }

[dev-dependencies]
nb = "1.0.0"
tokio = { version = "1.42.0", features = ["full"] }
futures = { version = "0.3.31"}
lazy_static = "1.5.0"
env_logger = "0.11.5"

[features]
full-display = []

defmt = [ "dep:defmt", "defmt-or-log/defmt"  ]
log = [ "full-display", "dep:log", "defmt-or-log/log" ]

default = [ "log" ]
