# TODO(xguo): Reorg the file.

[package]
name = "ferox-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
ferox = { version = "0.1", path = "../ferox", default-features = false, features = ["defmt"] }
defmt = { version = "0.3.10" }

[dev-dependencies]
static_cell = "2.1"
heapless = "0.8"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5"
embedded-alloc = "0.6"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embedded-hal-async = "1.0.0"
embassy-futures = "0.1.1"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32h723zg", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.6.1"
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
panic-halt = "1.0.0"
defmt-rtt = { version = "0.4.1" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[features]
defmt = []
default = ["debug", "defmt"]
debug = [
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
