[package]
name = "ferox-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
ferox = { version = "0.1.0", path = "../ferox", default-features = false, features = ["embedded"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "0.3.10" }
defmt-rtt = { version = "0.4.1" }
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-futures = { version = "0.1.1" }
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32h723zg", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.6.1"
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
heapless = "0.8.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
postcard = { version = "1.0", default-features = false, features = ["heapless"] }

[dev-dependencies]
static_cell = "2.1.0"
embedded-alloc = "0.6.0"
embassy-futures = "0.1.1"
panic-halt = "1.0.0"
num-traits = { version = "0.2.14", default-features = false }

[features]
defmt = []
default = ["debug", "defmt"]
debug = [
    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]

[profile.dev]
debug = 2
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = 2
lto = true
opt-level = "z"
incremental = true