[package]
name = "x86"
version = "0.1.0"
edition = "2021"

[dependencies]
ferox = { version = "0.1.0", path = "../ferox", default-features = false, features = ["embedded"] }

clap = { version = "4.5.23", features = [ "derive" ] }
serialport = "4.6.1"
serde = { version = "1.0.216" }
heapless = { version = "0.8.0", features = ["serde"] }
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
env_logger = { version = "0.11.5", default-features = false }
postcard = "1.1.1"
log = "0.4.22"